--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HelloWorld</string>
+    <string name="button_send">发送</string>
+    <string name="interact_message">我点击了发送</string>
+    <string name="start">开始游戏</string>
 </resources>
